--- a/02_Loading_Data.Rmd
+++ b/02_Loading_Data.Rmd
@@ -6,7 +6,7 @@ output: html_document
 ---
 
 ## Loading Data
-We can load data into R using some more built-in functions, and by default *R* imports each file as a `data.frame`.
+We can load data into *R* using some more built-in functions, and by default *R* imports each file as a `data.frame`.
 *R* expects to see some kind of delimiter it can use to make columns, and these can be:
 
 1. commas (e.g. a .csv file)
@@ -42,12 +42,12 @@ Now a preview screen has appeared, with numerous options.
 Now load the data, unchecking the `Strings as factors` box, and two lines of code will appear in your console.
 The second line of your code `View(toothData)` was entered by the GUI and will have made a preview frame of your data appear, just like a spreadsheet.
 We can use the function `View()` to inspect an R object anytime, although large objects will be truncated.
-Files with many rows or columns clearly place huge demands on your memory, and there is no pratical advantage to looking these using this method.
+Files with many rows or columns clearly place huge demands on your memory, and there is no pratical advantage to looking at these using this method.
 
 **Two important points**
 
-1. Using this method will give the *R* object, the same name as the file name, i.e. `toothData`
-2. Notice that this has generated two lines of code. If using this method, **ALWAYS** copy the first line to your R script. This contains actual code the GUI used to load your dataset, and just re-running this line will always perform the exact same action. 
+1. Using the GUI to import data will give the *R* object, the same name as the file name, i.e. `toothData`
+2. Notice that this has generated two lines of code. If using this method, **ALWAYS COPY THE FIRST LINE** to your R script. This contains actual code the GUI used to load your dataset, and just re-running this line will always perform the exact same action. 
 
 In our sample code, we should see  
 `toothData <- read.csv("path/to/data/toothData.csv", stringsAsFactors = FALSE)`.
@@ -91,5 +91,5 @@ However, if we wish to specify these in non-alphabetic order we can set the cate
 ```{r}
 toothData$dose <- factor(toothData$dose, levels=c("Low", "Med", "High"))
 ```
-
+Notice that in both of the above lines of code, we overwrote the original columns of data in the *R* object `toothData`.
 
