--- a/index.Rmd
+++ b/index.Rmd
@@ -1,32 +1,22 @@
 ---
-title: "Stream B2: Introduction to R Programming (BioinfoSummer 2015)"
-author: "Pengyi Yang & Stephen Pederson"
-date: "7 December 2015"
+title: "Introduction to R"
+subtitle: "University of Adelaide, Schol of Medicine"
+author: "Stephen Pederson, Bioinformatics Hub"
+date: "27 June 2016"
 output: html_document
 ---
 
 ## This website
-http://steveped.github.io/BioInfoSummer2015/index.html
+https://uofabioinformaticshub.github.io/schoolOfMedicine2016/
 
-## R and RStudio
-*R* is available from https://www.cran.r-project.org/
+## Instructions for Setup
 
-RStudio is available from https://www.rstudio.com/
-
-**Please ensure you have a working installation of RStudio!**
-
-## Today's Data
-`git clone https://github.com/steveped/BioInfoSummer2015.git`
-
-OR download from  
-
-https://github.com/steveped/BioInfoSummer2015/archive/gh-pages.zip
+Instructions for setting you computer up can be found [here](00_Setup.html)
 
 ## Introduction
 
 The R programming language provides an effective environment for making sense of data that enables us to address various biological questions. 
 In this introduction course, we will illustrate exploratory data analysis that involves calculating numerical and graphical summaries. 
-More specially, we will cover installation of R packages, writing basic R functions and examine various visualization tools.  
 For more intermediate participants in the course we will examine more complex visualization tools.
 
 ## Outline
@@ -47,6 +37,3 @@ The individual sessions are available at the following sites:
 [04_Introducing_Functions](04_Introducing_Functions.html)  
 [05_Writing_Functions](05_Writing_Functions.html)  
 [06_Customising_Functions](06_Customising_Functions.html)  
-
-### The package clueR
-[07_clueR](07_clueR.html)
